# Claw-Machine-University

./: README.md
autolab/: .gitignore  GLM47_SETUP.md  OPENCLAW_SKILLS_TUTORIAL.md  README.md  SKILLS_QUICKSTART.md  __init__.py  __main__.py  pyproject.toml
autolab/configs/: executor.yaml  gpu.yaml  openclaw.yaml  planner.yaml  policies.yaml  reporting.yaml  system.yaml
autolab/controller/: __init__.py  action_validator.py  heartbeat.py  loop.py  main.py  policies.py
autolab/evaluator/: __init__.py  comparator.py  completion_detector.py  failure_analyzer.py  metric_parser.py  result_summarizer.py
autolab/executor/: __init__.py  gpu_scheduler.py  job_runner.py  local_runner.py  process_monitor.py  ssh_runner.py  worker_registry.py
autolab/openclaw/agent/: __init__.py  code_patcher.yaml  experiment_operator.yaml  (+2 more)
autolab/patcher/: __init__.py  code_patcher.py  config_patcher.py  patch_recorder.py  validation.py
autolab/planner/: __init__.py  action_router.py  context_builder.py  glm_bridge.py  openclaw_bridge.py  prompts.py
autolab/reporting/: __init__.py  cycle_report.py  markdown_report.py
autolab/schemas/: action.py  config.py  experiment.py  hypothesis.py  result.py  state.py  worker.py
autolab/storage/: __init__.py  artifact_store.py  experiment_store.py  git_snapshot.py  result_store.py  state_store.py
autolab/tools/: __init__.py  check_workers.py  export_summary.py  generate_cycle_report.py  list_failures.py  mark_baseline.py  rebuild_state.py  rerun_experiment.py  show_history.py  show_queue.py  stop_experiment.py  sync_running_jobs.py
(+17 files in other folders)
